--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ header {
   .navbar-right {
 	display: flex;
     align-items: center;
-    margin-left: 25%;
+	margin-left: 24%;
 
 	}
 
@@ -939,8 +939,8 @@ header {
 	width: 100%;
 	border: 0;
 	padding: 15px;
+    margin-block-start: 5px;
 	margin-block-end: 15px;
-    margin-block-start: 20px;
 	box-sizing: border-box;
 	font-size: 14px;
   }
@@ -1198,4 +1198,7 @@ header {
 
 	}
 
-
+.COMPTE {
+	margin-block-end: 200px;
+	margin-block-start: 200px;
+}
