--- a/templates/account.phtml
+++ b/templates/account.phtml
@@ -1,1 +1,12 @@
-<h1 class="COMPTE">Mon compte</h1>
+<div class="COMPTE">
+<h1>Mon compte</h1>
+<p>Nom : <?php echo getUserName($pdo, $_SESSION['user_id']); ?></p>
+<p>Prénom : <?php echo getUserFirstname($pdo, $_SESSION['user_id']); ?></p>
+<p>Votre adresse e-mail : <?php echo getUserEmail($pdo, $_SESSION['user_id']); ?></p>
+<p>Votre âge : <?php echo getUserAge($pdo, $_SESSION['user_id']); ?> ans</p>
+
+<form method="post" action="account.php" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer votre compte ?')">
+      <input type="hidden" name="delete_account" value="1">
+      <button type="submit" class="supprimer-compte">Supprimer mon compte <i class="fa-solid fa-trash-can"></i></button>
+  </form>
+</div>
