--- a/templates/connexion.phtml
+++ b/templates/connexion.phtml
@@ -24,7 +24,7 @@
             
 
             <input type="submit" value="Connexion" class="btn">
-            <p class="message">Vous n'avez pas de compte? <a href="inscription.php">S'inscrire</a></p>
+            <p class="message">Vous n'avez pas de compte? <a href="Inscription">S'inscrire</a></p>
         </form>
 
         </div>
