--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -7,8 +7,8 @@
         <h2>Votre santé <br> <span>Notre priorité </span></h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorum magni ullam, nesciunt suscipit labore, amet optio vero quo eius enim quod sapiente consequuntur est ratione repellat autem unde adipisci?</p>
         <div class="buttons-container">
-            <button class="premier">Button 1 ➤</button>
-            <button class="deux">Button 2</button>
+            <button class="premier"><a href="#LocaliserDesDocteurs">Localiser Des Docteurs <i class="fa-sharp fa-solid fa-location-dot fa-shake"></i></a></button>
+            <button class="deux"><a href="#AboutUs">About us <i class="fa-solid fa-users"></i></a></button>
         </div>
         </div>
     </section>
@@ -41,7 +41,7 @@
   </div>
 </section>
 
-  <section class="Aboutus">
+  <section class="Aboutus" id="AboutUs">
 
     <div class="icon">
       <i class="fa-solid fa-heart fa-beat"></i>
@@ -58,7 +58,7 @@
       <img src="img/pexels-karolina-grabowska-4021769.jpg" alt="description de l'image">
     </div>
     <div class="text-container">
-      <h2>Pourquoi choisir <span> Doctowebline </span>?</h2>
+      <h2>Pourquoi choisir <span> Doctowebline </span><i class="fa-solid fa-question fa-bounce"></i></h2>
       <div class="points-container">
         <div class="point">
           <i class="fa-solid fa-circle-check"></i>
@@ -79,11 +79,11 @@
     </div>
   </section>
 
-  <section class="find">
+  <section class="find" id="LocaliserDesDocteurs">
 
     <div class="map-container">
 
-      <h1>Trouvez des docteurs près de chez vous ! </h1>
+      <h1>Trouvez des docteurs près de chez vous ! <br> <i class="fa-sharp fa-solid fa-location-dot fa-flip"></i> </h1>
 
       <button id="find-me">Localiser des docteurs</button><br/>
       <iframe id="map-iframe" style="border:0" loading="lazy" allowfullscreen></iframe>
