--- a/templates/base.phtml
+++ b/templates/base.phtml
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Doctowebline</title>
+    <meta name="robots" content="index,follow,snippet">
+    <meta name="description" content="Trouvez un professionnel de santé en ligne avec Doctolib. Prenez rendez-vous en quelques clics avec un médecin généraliste, un spécialiste, un dentiste, un kiné et bien d'autres. Consultez des avis et des disponibilités en temps réel. Simplifiez la prise de rendez-vous médical dès maintenant.">
     <link rel="stylesheet" href="http://localhost/Code/Projet/css/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +21,7 @@
       
       <nav class="navbar">
         <div class="navbar-left">
-          <a href="Accueil"><img src="img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Mon Logo"></a>
+          <a href="Accueil"><img src="img/doctowebline-high-resolution-logo-color-on-transparent-background.png" class="logo" alt="Doctowebline Logo"></a>
         </div>
         <div class="navbar-right">
           <ul class="mobile-menu">
@@ -76,14 +78,14 @@
       <footer id="Contact">
         <div class="containerfoot">
           <div class="logofooter">
-            <img src="img/FOOTER.png" alt="Logo">
+            <img src="img/FOOTER.png" alt="Doctowebline logo">
           </div>
           <div class="info-col">
             <h4>Informations</h4>
             <ul>
-              <li><a href="#">Contact</a></li>
-              <li><a href="#">Mention légales</a></li>
-              <li><a href="#">Conditions générales d'utilisation</a></li>
+              <li><a href="#Contact">Contact</a></li>
+              <li><a href="MentionsLégales">Mention légales</a></li>
+              <li><a href="ConditionsGénérales">Conditions générales d'utilisation</a></li>
             </ul>
           </div>
           <div class="contact-col">
