--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -1,14 +1,14 @@
 
     <section class="main-section">
         <div class="main-section-left">
-        <img src="img/pexels-karolina-grabowska-5207102.jpg" alt="description_de_l'image" class="circular-image">
+        <img src="img/pexels-karolina-grabowska-5207102.jpg" alt="Docteur" class="circular-image">
         </div>
         <div class="main-section-right">
         <h2>Votre santé <br> <span>Notre priorité </span></h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorum magni ullam, nesciunt suscipit labore, amet optio vero quo eius enim quod sapiente consequuntur est ratione repellat autem unde adipisci?</p>
         <div class="buttons-container">
             <button class="premier"><a href="#LocaliserDesDocteurs">Localiser Des Docteurs <i class="fa-sharp fa-solid fa-location-dot fa-shake"></i></a></button>
-            <button class="deux"><a href="#AboutUs">About us <i class="fa-solid fa-users"></i></a></button>
+            <button class="deux"><a href="#AboutUs">About Us <i class="fa-solid fa-users"></i></a></button>
         </div>
         </div>
     </section>
@@ -55,7 +55,7 @@
 
   <section class="choose-us-section">
     <div class="image-container">
-      <img src="img/pexels-karolina-grabowska-4021769.jpg" alt="description de l'image">
+      <img src="img/pexels-karolina-grabowska-4021769.jpg" alt="Docteur">
     </div>
     <div class="text-container">
       <h2>Pourquoi choisir <span> Doctowebline </span><i class="fa-solid fa-question fa-bounce"></i></h2>
@@ -67,12 +67,12 @@
         </div>
         <div class="point">
           <i class="fa-solid fa-circle-check"></i>
-          <h3 class="title">Expertise</h3>
+          <h3 class="title">Efficacité</h3>
           <p>Nous travaillons avec chaque client individuellement pour nous assurer que leurs besoins sont comblés.</p>
         </div>
         <div class="point">
           <i class="fa-solid fa-circle-check"></i>
-          <h3 class="title">Expertise</h3>
+          <h3 class="title">Rapidité</h3>
           <p>Nous offrons des prix compétitifs pour notre service de qualité supérieure.</p>
         </div>
       </div>
@@ -92,6 +92,4 @@
     </div>
 
   </section>
-<!-- 
-  <script type="text/javascript" src="js/config.js"></script>
-  <script type="text/javascript"  src="js/app.js"></script> -->
+
