--- a/templates/inscription.phtml
+++ b/templates/inscription.phtml
@@ -33,7 +33,8 @@
             <?php endif; ?>
 
               <input type="submit" value="S'inscrire" class="btn">
-                <p class="message">Vous avez déjà un compte? <a href="Connexion">Se connecter</a></p>
+               <p class="message"> Conditions générales d'utilisation <a href="ConditionsGénérales">Lire</a></p>
+               <p class="message">Vous avez déjà un compte? <a href="Connexion">Se connecter</a></p>
            </form>
         </div>
       </div>
