--- a/templates/docteur.phtml
+++ b/templates/docteur.phtml
@@ -1,6 +1,6 @@
 <section class="Gereruser">
 <h1>Ajouter un médecin</h1>
-<form method="post" action="addDoc.php">
+<form method="post" class ="form" action="addDoc.php">
     <label for="nom">Nom:</label>
     <input type="text" id="nom" name="nom" required><br>
 
@@ -29,7 +29,7 @@
           <p class="message error"><?= $errors['ville_id'] ?></p>
         <?php endif; ?>
 
-    <input type="submit" value="Ajouter">
+    <input type="submit" class="btn" value="Ajouter">
 </form>
 </section>
 
@@ -43,6 +43,7 @@
             <table>
                 <thead>
                     <tr>
+                        <th>ID</th>
                         <th>Nom</th>
                         <th>Email</th>
                         <th>Spécialité</th>
@@ -53,6 +54,7 @@
                 <tbody>
                     <?php foreach ($medecins as $medecin): ?>
                         <tr>
+                            <td><?= $medecin['id'] ?></td>
                             <td><?= $medecin['nom'] ?></td>
                             <td><?= $medecin['email'] ?></td>
                             <td><?= $medecin['specialite'] ?></td>
