--- a/templates/inscription.phtml
+++ b/templates/inscription.phtml
@@ -1,5 +1,5 @@
 <div class="login-page">
-        <h1>Inscription</h1>
+<h1 style="text-shadow: 4px 2px 5px rgba(0, 0, 0, 0.5);">Inscription</h1>
         <div class="form">
           
            <form class="login-form" method="POST" action="Inscription">
