--- a/css/style.css
+++ b/css/style.css
@@ -820,6 +820,7 @@ header {
   .form {
 	position: relative;
 	z-index: 1;
+	border-radius: 50px;
 	background: #FFFFFF;
 	max-width: 360px;
 	margin: 0 auto 100px;
@@ -841,6 +842,19 @@ header {
   }
 
   #heure {
+	font-family: 'Montserrat', sans-serif;
+	outline: 0;
+	background: #f2f2f2;
+	width: 100%;
+	border: 0;
+	padding: 15px;
+    margin-block-start: 5px;
+	margin-block-end: 15px;
+	box-sizing: border-box;
+	font-size: 14px;
+  }
+
+  #medecin_id {
 	font-family: 'Montserrat', sans-serif;
 	outline: 0;
 	background: #f2f2f2;
@@ -1164,6 +1178,7 @@ header {
 .TitreRDV {
 	display: flex;
 	justify-content: center;
+	margin-top: 10px;
   }
 
 .LesRDV {
