--- a/templates/connexion.phtml
+++ b/templates/connexion.phtml
@@ -1,5 +1,5 @@
 <div class="login-page">
-        <h1>Connexion</h1>
+<h1 style="text-shadow: 4px 2px 5px rgba(0, 0, 0, 0.5);">Connexion</h1>
         <div class="form">
          
           
