--- a/templates/base.phtml
+++ b/templates/base.phtml
@@ -48,8 +48,8 @@
             } else {
               // Si l'utilisateur n'est pas connecté, on affiche les boutons "À propos de nous" et "Localiser"
               echo '
-                <li><a href="#AboutUs">À propos de nous</a></li>
-                <li><a href="#LocaliserDesDocteurs">Localiser</a></li>
+                <li><a href="Accueil#AboutUs">À propos de nous</a></li>
+                <li><a href="Accueil#LocaliserDesDocteurs">Localiser</a></li>
               ';
             }
           ?>
