--- a/templates/confirmation.phtml
+++ b/templates/confirmation.phtml
@@ -1,7 +1,7 @@
 <div class="login-page">
   <h1>Confirmation de rendez-vous</h1>
   <div class="form">
-    <form class="login-form" method="POST" action="confirmation.php">
+    <form class="login-form" method="POST" action="confirmation">
       <label for="medecin_id">Médecin :</label>
       <select id="medecin_id" name="medecin_id">
         <option value="">Sélectionnez un médecin</option>
@@ -21,4 +21,3 @@
     </form>
   </div>
 </div>
-
