--- a/templates/connexion.phtml
+++ b/templates/connexion.phtml
@@ -1,35 +1,35 @@
 <div class="login-page">
-<h1 style="text-shadow: 4px 2px 5px rgba(0, 0, 0, 0.5);">Connexion</h1>
-        <div class="form">
-         
-          
-         
-        <form class="login-form" method="POST" action="connexion.php">
+   <h1 style="text-shadow: 4px 2px 5px rgba(0, 0, 0, 0.5);">Connexion</h1>
+   <div class="form">
 
-            <label for="email">Email :</label>
-            <input type="email" name="email" value="<?php echo isset($_POST['email']) ? htmlspecialchars($_POST['email']) : ''; ?>">
-            <?php if (isset($errors['email'])) : ?>
-               <p class="message error"><?= $errors['email']; ?></p>
-            <?php endif; ?>
-            
-            <label for="mot_de_passe">Mot de passe :</label>
-            <input type="password" id="mot_de_passe" name="mot_de_passe">
-            <?php if (isset($errors['mot_de_passe'])) : ?>
-               <p class="message error"><?= $errors['mot_de_passe']; ?></p>
-            <?php endif; ?>
 
-            <?php if (isset($errors['login'])) : ?>
-               <p class="message error"><?= $errors['login']; ?></p>
-            <?php endif; ?>
-            
 
-            <input type="submit" value="Connexion" class="btn">
-            <p class="message">Vous n'avez pas de compte? <a href="Inscription">S'inscrire</a></p>
-        </form>
+      <form class="login-form" method="POST" action="Connexion">
 
-        </div>
-      </div>
+         <label for="email">Email :</label>
+         <input type="email" name="email" value="<?php echo isset($_POST['email']) ? htmlspecialchars($_POST['email']) : ''; ?>">
+         <?php if (isset($errors['email'])) : ?>
+            <p class="message error"><?= $errors['email']; ?></p>
+         <?php endif; ?>
 
-   
+         <label for="mot_de_passe">Mot de passe :</label>
+         <input type="password" id="mot_de_passe" name="mot_de_passe">
+         <?php if (isset($errors['mot_de_passe'])) : ?>
+            <p class="message error"><?= $errors['mot_de_passe']; ?></p>
+         <?php endif; ?>
+
+         <?php if (isset($errors['login'])) : ?>
+            <p class="message error"><?= $errors['login']; ?></p>
+         <?php endif; ?>
+
+
+         <input type="submit" value="Connexion" class="btn">
+         <p class="message">Vous n'avez pas de compte? <a href="Inscription">S'inscrire</a></p>
+      </form>
+
+   </div>
+</div>
+
+
 
 </header>
