--- a/templates/docteur.phtml
+++ b/templates/docteur.phtml
@@ -1,6 +1,6 @@
 <section class="Gereruser">
-<h1>Ajouter un médecin</h1>
-<form method="post" class ="form" action="addDoc.php">
+  <h1>Ajouter un médecin</h1>
+  <form method="post" class="form" action="addDoc">
     <label for="nom">Nom:</label>
     <input type="text" id="nom" name="nom" required><br>
 
@@ -8,63 +8,62 @@
     <input type="email" id="email" name="email" required><br>
 
     <label for="specialite_id">Spécialité :</label>
-        <select id="specialite_id" name="specialite_id">
-          <option value="">Sélectionnez une spécialité</option>
-          <?php foreach ($specialites as $specialite) : ?>
-            <option value="<?= $specialite['id'] ?>"><?= $specialite['nom'] ?></option>
-          <?php endforeach; ?>
-        </select>
-        <?php if (isset($errors['specialite_id'])) : ?>
-          <p class="message error"><?= $errors['specialite_id'] ?></p>
-        <?php endif; ?>
+    <select id="specialite_id" name="specialite_id">
+      <option value="">Sélectionnez une spécialité</option>
+      <?php foreach ($specialites as $specialite) : ?>
+        <option value="<?= $specialite['id'] ?>"><?= $specialite['nom'] ?></option>
+      <?php endforeach; ?>
+    </select>
+    <?php if (isset($errors['specialite_id'])) : ?>
+      <p class="message error"><?= $errors['specialite_id'] ?></p>
+    <?php endif; ?>
 
-        <label for="ville_id">Ville :</label>
-        <select id="ville_id" name="ville_id">
-          <option value="">Sélectionnez une ville</option>
-          <?php foreach ($villes as $ville) : ?>
-            <option value="<?= $ville['id'] ?>"><?= $ville['nom'] ?></option>
-          <?php endforeach; ?>
-        </select>
-        <?php if (isset($errors['ville_id'])) : ?>
-          <p class="message error"><?= $errors['ville_id'] ?></p>
-        <?php endif; ?>
+    <label for="ville_id">Ville :</label>
+    <select id="ville_id" name="ville_id">
+      <option value="">Sélectionnez une ville</option>
+      <?php foreach ($villes as $ville) : ?>
+        <option value="<?= $ville['id'] ?>"><?= $ville['nom'] ?></option>
+      <?php endforeach; ?>
+    </select>
+    <?php if (isset($errors['ville_id'])) : ?>
+      <p class="message error"><?= $errors['ville_id'] ?></p>
+    <?php endif; ?>
 
     <input type="submit" class="btn" value="Ajouter">
-</form>
+  </form>
 </section>
 
 
 <section class="Gereruser">
-    <h1>Liste des médecins</h1>
-    <div class="Docteurs">
-        <?php if (empty($medecins)): ?>
-            <p>Aucun médecin n'a été trouvé.</p>
-        <?php else: ?>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Nom</th>
-                        <th>Email</th>
-                        <th>Spécialité</th>
-                        <th>Ville</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php foreach ($medecins as $medecin): ?>
-                        <tr>
-                            <td><?= $medecin['id'] ?></td>
-                            <td><?= $medecin['nom'] ?></td>
-                            <td><?= $medecin['email'] ?></td>
-                            <td><?= $medecin['specialite'] ?></td>
-                            <td><?= $medecin['ville'] ?></td>
-                            <td><a href="deleteDoc.php?doctor_id=<?= $medecin['id'] ?>">Supprimer</a></td>
-                        </tr>
-                    <?php endforeach; ?>
-                </tbody>
-            </table>
-        <?php endif; ?>
-    </div>
+  <h1>Liste des médecins</h1>
+  <div class="Docteurs">
+    <?php if (empty($medecins)) : ?>
+      <p>Aucun médecin n'a été trouvé.</p>
+    <?php else : ?>
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Nom</th>
+            <th>Email</th>
+            <th>Spécialité</th>
+            <th>Ville</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody>
+          <?php foreach ($medecins as $medecin) : ?>
+            <tr>
+              <td><?= $medecin['id'] ?></td>
+              <td><?= $medecin['nom'] ?></td>
+              <td><?= $medecin['email'] ?></td>
+              <td><?= $medecin['specialite'] ?></td>
+              <td><?= $medecin['ville'] ?></td>
+              <td><a href="deleteDoc?doctor_id=<?= $medecin['id'] ?>">Supprimer</a></td>
+            </tr>
+          <?php endforeach; ?>
+        </tbody>
+      </table>
+    <?php endif; ?>
+  </div>
 </section>
-
