--- a/templates/rdv.phtml
+++ b/templates/rdv.phtml
@@ -1,60 +1,60 @@
 <div class="login-page">
   <h1>Prendre rendez-vous</h1>
   <div class="form">
-    <form class="login-form" method="POST" action="rdv.php">
-        <label for="specialite_id">Spécialité :</label>
-        <select id="specialite_id" name="specialite_id">
-          <option value="">Sélectionnez une spécialité</option>
-          <?php foreach ($specialites as $specialite) : ?>
-            <option value="<?= $specialite['id'] ?>"><?= $specialite['nom'] ?></option>
-          <?php endforeach; ?>
-        </select>
-        <?php if (isset($errors['specialite_id'])) : ?>
-          <p class="message error"><?= $errors['specialite_id'] ?></p>
-        <?php endif; ?>
+    <form class="login-form" method="POST" action="rdv">
+      <label for="specialite_id">Spécialité :</label>
+      <select id="specialite_id" name="specialite_id">
+        <option value="">Sélectionnez une spécialité</option>
+        <?php foreach ($specialites as $specialite) : ?>
+          <option value="<?= $specialite['id'] ?>"><?= $specialite['nom'] ?></option>
+        <?php endforeach; ?>
+      </select>
+      <?php if (isset($errors['specialite_id'])) : ?>
+        <p class="message error"><?= $errors['specialite_id'] ?></p>
+      <?php endif; ?>
 
-        <label for="ville_id">Ville :</label>
-        <select id="ville_id" name="ville_id">
-          <option value="">Sélectionnez une ville</option>
-          <?php foreach ($villes as $ville) : ?>
-            <option value="<?= $ville['id'] ?>"><?= $ville['nom'] ?></option>
-          <?php endforeach; ?>
-        </select>
-        <?php if (isset($errors['ville_id'])) : ?>
-          <p class="message error"><?= $errors['ville_id'] ?></p>
-        <?php endif; ?>
+      <label for="ville_id">Ville :</label>
+      <select id="ville_id" name="ville_id">
+        <option value="">Sélectionnez une ville</option>
+        <?php foreach ($villes as $ville) : ?>
+          <option value="<?= $ville['id'] ?>"><?= $ville['nom'] ?></option>
+        <?php endforeach; ?>
+      </select>
+      <?php if (isset($errors['ville_id'])) : ?>
+        <p class="message error"><?= $errors['ville_id'] ?></p>
+      <?php endif; ?>
 
-              <label for="date">Date :</label>
-        <input type="date" id="date" name="date" value="<?= isset($_POST['date']) ? htmlspecialchars($_POST['date']) : '' ?>" min="<?= date('Y-m-d') ?>" max="<?= date('Y-m-d', strtotime('+1 year')) ?>">
-        <?php if (isset($errors['date'])) : ?>
-          <p class="message error"><?= $errors['date'] ?></p>
-        <?php endif; ?>
-
-
-        <label for="heure">Heure :</label>
-        <select id="heure" name="heure">
-            <option value="">Choisir une heure</option>
-            <?php
-            for ($h = 8; $h <= 18; $h++) {
-                for ($m = 0; $m < 60; $m += 30) {
-                    $time = sprintf('%02d:%02d', $h, $m);
-                    $selected = isset($_POST['heure']) && $_POST['heure'] === $time ? 'selected' : '';
-                    echo "<option value=\"$time\" $selected>$time</option>";
-                }
-            }
-            ?>
-        </select>
-        <?php if (isset($errors['heure'])) : ?>
-            <p class="message error"><?= $errors['heure'] ?></p>
-        <?php endif; ?>
+      <label for="date">Date :</label>
+      <input type="date" id="date" name="date" value="<?= isset($_POST['date']) ? htmlspecialchars($_POST['date']) : '' ?>" min="<?= date('Y-m-d') ?>" max="<?= date('Y-m-d', strtotime('+1 year')) ?>">
+      <?php if (isset($errors['date'])) : ?>
+        <p class="message error"><?= $errors['date'] ?></p>
+      <?php endif; ?>
 
 
-        <input type="submit" name="submit" value="Prendre rendez-vous" class="btn">
+      <label for="heure">Heure :</label>
+      <select id="heure" name="heure">
+        <option value="">Choisir une heure</option>
+        <?php
+        for ($h = 8; $h <= 18; $h++) {
+          for ($m = 0; $m < 60; $m += 30) {
+            $time = sprintf('%02d:%02d', $h, $m);
+            $selected = isset($_POST['heure']) && $_POST['heure'] === $time ? 'selected' : '';
+            echo "<option value=\"$time\" $selected>$time</option>";
+          }
+        }
+        ?>
+      </select>
+      <?php if (isset($errors['heure'])) : ?>
+        <p class="message error"><?= $errors['heure'] ?></p>
+      <?php endif; ?>
 
-        <?php if (isset($errors['medecin_id'])) : ?>
-          <p class="message error"><?= $errors['medecin_id'] ?></p>
-        <?php endif; ?>
-        
+
+      <input type="submit" name="submit" value="Prendre rendez-vous" class="btn">
+
+      <?php if (isset($errors['medecin_id'])) : ?>
+        <p class="message error"><?= $errors['medecin_id'] ?></p>
+      <?php endif; ?>
+
     </form>
   </div>
 </div>
