--- a/templates/base.phtml
+++ b/templates/base.phtml
@@ -93,7 +93,7 @@
         <div class="info-col">
           <h4>Informations</h4>
           <ul>
-            <li><a href="#Contact">Contact</a></li>
+            <li><a href="Accueil">Accueil</a></li>
             <li><a href="MentionsLégales">Mention légales</a></li>
             <li><a href="ConditionsGénérales">Conditions générales d'utilisation</a></li>
           </ul>
