--- a/templates/index.phtml
+++ b/templates/index.phtml
@@ -18,7 +18,7 @@
     <div class="box1">
       <div class="box1-ctn">
         <i class="fa-solid fa-clock"></i>
-        <h3 class="titre-box1">Quality Product</h3>
+        <h3 class="titre-box1">N'importe Quand</h3>
         <p class="sous-titre-box1">Lorem ipsum dolor sit amet, consectetur</br> adipisicing elit, sed do eiusm od tempor</br> incididunt ut labore et dolore magna aliqua</br> ut enim adminim.</p>
       </div>
     </div>
@@ -26,14 +26,14 @@
     <div class="box2">
       <div class="box2-ctn">
         <i class="fa-solid fa-map-location-dot"></i>
-        <h3 class="titre-box2">Growth Strategy</h3>
+        <h3 class="titre-box2">N'importe Où</h3>
         <p class="sous-titre-box2">Lorem ipsum dolor sit amet, consectetur</br> adipisicing elit, sed do eiusm od tempor</br> incididunt ut labore et dolore magna aliqua</br> ut enim adminim.</p>
       </div>
     </div>
     <div class="box3">
       <div class="box3-ctn">
         <i class="fa-solid fa-stethoscope"></i>
-        <h3 class="titre-box3">Competitive Price</h3>
+        <h3 class="titre-box3">Toutes spécialités</h3>
         <p class="sous-titre-box3">Lorem ipsum dolor sit amet, consectetur</br> adipisicing elit, sed do eiusm od tempor</br> incididunt ut labore et dolore magna aliqua</br> ut enim adminim.</p>
       </div>
     </div>
@@ -62,17 +62,17 @@
       <div class="point">
         <i class="fa-solid fa-circle-check"></i>
         <h3 class="title">Expertise</h3>
-        <p>Nous sommes des experts dans notre domaine et nous offrons un service de qualité supérieure.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorum <br> magni ullam,nesciunt suscipit labore.</p>
       </div>
       <div class="point">
         <i class="fa-solid fa-circle-check"></i>
         <h3 class="title">Efficacité</h3>
-        <p>Nous travaillons avec chaque client individuellement pour nous assurer que leurs besoins sont comblés.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorum <br> magni ullam,nesciunt suscipit labore.</p>
       </div>
       <div class="point">
         <i class="fa-solid fa-circle-check"></i>
         <h3 class="title">Rapidité</h3>
-        <p>Nous offrons des prix compétitifs pour notre service de qualité supérieure.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorum <br> magni ullam,nesciunt suscipit labore.</p>
       </div>
     </div>
   </div>
